--- a/I2C - STM32 R2.2
+++ b/I2C - STM32 R2.2
@@ -1,4 +1,3 @@
-/* Includes ------------------------------------------------------------------ */
 #include "main.h"
 #include "stm32l4xx.h"
 
@@ -102,14 +101,13 @@ void I2C_SendNumber(uint8_t number) {
     while (!(I2C1->ISR & I2C_ISR_TXIS)); // Wait for TXIS flag
     I2C1->TXDR = number; // Send data byte
     while (!(I2C1->ISR & I2C_ISR_TC)); // Wait until transfer complete
-}
     
 
     // Wait for the STOP condition to be generated
-   // while (!(I2C1->ISR & I2C_ISR_STOPF));
+    while (!(I2C1->ISR & I2C_ISR_STOPF));
 
     // Clear the STOP condition flag
-  //Z  I2C1->ICR = I2C_ICR_STOPCF;
+    I2C1->ICR = I2C_ICR_STOPCF;
 
 }
 
