--- a/I2CSTM R2.4
+++ b/I2CSTM R2.4
@@ -1,4 +1,3 @@
-/* Includes ------------------------------------------------------------------ */
 #include "main.h"
 #include "stm32l4xx.h"
 
@@ -84,7 +83,7 @@ void I2C1_Init(void) {
  * Action   : Sends a single byte (number) to the ESP32 over I2C
  ----------------------------------------------------------------------------- */
 void I2C_SendNumber(uint8_t number) {
-    uint8_t ESP32_ADDRESS = 0x3D; // Replace with the actual ESP32 address
+    uint8_t ESP32_ADDRESS = 0x51; // Replace with the actual ESP32 address
 
     // Wait until the I2C bus is ready
     if (I2C1->ISR & I2C_ISR_BUSY) {
@@ -98,17 +97,17 @@ void I2C_SendNumber(uint8_t number) {
     I2C1->CR2 &= ~I2C_CR2_RD_WRN;           // Write mode
     I2C1->CR2 |= I2C_CR2_START;             // Generate START condition
 
-    // Wait for TXIS flag (ready to transmit)
-    while (!(I2C1->ISR & (I2C_ISR_TXIS ))) {
-    	 I2C1->TXDR = number; // Send data byte
-    	    while (!(I2C1->ISR & I2C_ISR_TC)); // Wait until transfer complete
-        }
 
-    	// Wait for the STOP condition to be generated
-       while (!(I2C1->ISR & I2C_ISR_STOPF));
+    while (!(I2C1->ISR & I2C_ISR_TXIS)); // Wait for TXIS flag
+    I2C1->TXDR = number; // Send data byte
+    while (!(I2C1->ISR & I2C_ISR_TC)); // Wait until transfer complete
 
-       // Clear the STOP condition flag
-       I2C1->ICR = I2C_ICR_STOPCF;
+
+    // Wait for the STOP condition to be generated
+    while (!(I2C1->ISR & I2C_ISR_STOPF));
+
+    // Clear the STOP condition flag
+    I2C1->ICR = I2C_ICR_STOPCF;
 
 }
 
